chore: apply OpenRewrite formatting and CUI standards auto-fixes
- Update license headers to 2025 CUI-OpenSource-Software format
- Add license headers to package-info.java files missing them
- Rename logger fields from 'log' to 'LOGGER' (CUI standard)
- Reorder exception parameters to first position (CUI standard)
- Add maven.compiler.release=21 property
- Add provided scope for missing dependency
- Auto-format code (indentation, whitespace)
- Fix missed 'log' to 'LOGGER' reference in PortalLazyLoadingThreadModelMock

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>